# TRIP-TPE

./: .gitignore  LICENSE  README.md  pyproject.toml  test_yahpo.py  ~WRL3942.tmp
configs/: default.yaml  lightweight.yaml
tests/: test_config.py  test_dataset.py  test_integration.py  test_loss.py  test_metrics.py  test_model.py  test_preprocessing.py  test_sampler.py  test_search_space.py
trip_tpe/: __init__.py
trip_tpe/data/: __init__.py  generate_trajectories.py  preprocessing.py  trajectory_dataset.py
trip_tpe/evaluation/: __init__.py  benchmark.py
trip_tpe/models/: __init__.py  region_proposal_transformer.py
trip_tpe/samplers/: __init__.py  optunahub_entry.py  trip_tpe_sampler.py
trip_tpe/training/: __init__.py  loss.py  train.py
trip_tpe/utils/: __init__.py  config.py  metrics.py  search_space.py
